Fix for mobile dialog jumping to top of screen on close

--- a/components/dropdown/src/styles/classic/bibStyles.scss
+++ b/components/dropdown/src/styles/classic/bibStyles.scss
@@ -31,13 +31,18 @@
     // Fix Safari rendering bug - force GPU compositing
     transform: translateZ(0);
 
-    // Explicit positioning for non-modal show()
-    position: absolute;
-    inset: unset;
-
     &::backdrop {
       background: transparent;
     }
+  }
+}
+
+:host(:not([isfullscreen])) {
+  dialog {
+    // Explicit positioning for non-modal show() - only needed for desktop mode
+    // Avoid setting position in fullscreen mode as it causes scroll jump with showModal()
+    position: absolute;
+    inset: unset;
   }
 }
 
